# AI-for-Medicine

./: pyproject.toml
Week1/Labs/Notebooks/: Data Exploration & Image Pre-Processing.ipynb
