[tool.poetry]
name = "AI-FOR-MEDICINE"
version = "1.0.0"
description = ""
authors = ["sahilsahnitempus"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "1.10.6"

[tool.poetry.group.dev.dependencies]
isort = "5.10.1"
pre-commit = "2.20.0"
mypy = "0.982"
flake8 = "5.0.4"
pytest-asyncio = "0.20.1"
pytest-cov = "4.0.0"
black = "23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
